
           CHANGELOG for the EPR-API, VERSION 2.3


----------------------------------------------------------------------
Changes from Version 2.2 to Version 2.3 (of DD. MMMM YYYY)
----------------------------------------------------------------------
1) Bugfix in epr_band.c: [EPR-7] Interpolation of geolocation ADS
2) Bugfix in epr_core.c: Setting errno to 0 in method epr_str_to_number.
3) Switched to a new test file.
4) Fixed some memory leaks.
5) Packed data structures to reduce memory usage.
6) Minor low-level performance improvements.

----------------------------------------------------------------------
Changes from Version 2.1 to Version 2.2 (of 31. July 2010)
----------------------------------------------------------------------
Generally replaced usage of data type "long" by "int" since "long" is 
ambiguous with respect to 32bit and 64bit operating systems.

----------------------------------------------------------------------
Changes from Version 2.0.5 to Version 2.1 (of 6. May 2009)
----------------------------------------------------------------------
Support of MER_FRS (full resulution full swath) products
Support of IODD7

----------------------------------------------------------------------
Changes from Version 2.0.4 to Version 2.0.5 (of 28. October 2004)
----------------------------------------------------------------------
Bugfix in file epr_bitmask.c:
If function epr_read_bitmask_raster() was called with non-zero pixel
offsets, the application crashed due to an invalid array index
exception.

----------------------------------------------------------------------
Changes from Version 2.0.3 to Version 2.0.4 (of 23. June 2004)
----------------------------------------------------------------------
Support for updated MERIS RR/FR Level 2 product format
Backward compatibility with older formats is ensured.
The new product changes are:
    a) the band "aero_epsilon" has been replaced by "aero_alpha".
    b) new flags have been added: