@@ -1,2 +1,2 @@
-VERSION 2.3-SNAPSHOT
+VERSION 2.3.1-SNAPSHOT
 
