@@ -42,7 +42,8 @@
 <h2>1. Introduction</h2>
 <p>
     The ENVISAT Product Reader API for C (<code>epr-c-api</code>) is a library of data
-    structures and functions for simple access to MERIS, AATSR and ASAR products. You can use
+    structures and functions for simple access to MERIS, AATSR and ASAR products as well as ATSR-2
+    products stored in the ENVISAT format. You can use
     them in your programs to retrieve directly the geophysically coded values, e.g.
     such as the chlorophyll concentration in mg/m³, in a data matrix.
 <p>
