@@ -1,9 +1,14 @@
 
-           CHANGELOG for the EPR-API, VERSION 2.3
+           CHANGELOG for the EPR-API, VERSION 2.3.1
 
 
 ----------------------------------------------------------------------
-Changes from Version 2.2 to Version 2.3 (of DD. MMMM YYYY)
+Changes from Version 2.3 to Version 2.3.1 (of 5. August 2022)
+----------------------------------------------------------------------
+Support for ATSR-2 files stored in the ENVISAT format
+
+----------------------------------------------------------------------
+Changes from Version 2.2 to Version 2.3 (of 3. September 2021)
 ----------------------------------------------------------------------
 1) Bugfix in epr_band.c: [EPR-7] Interpolation of geolocation ADS
 2) Bugfix in epr_core.c: Setting errno to 0 in method epr_str_to_number.
